tests/od2trips/errors/false_options/false_output/options.od2trips
-n input_taz.taz.xml -d input_od_o.fma -o xxxx/trips.trips.xml
